# middle-python-dev-course

./: .gitignore  Makefile  pyproject.toml  setup.cfg
practice/sprint1/: empire_brings_bugs.py  etl.py  etl_author.py  etl_classy.py  etl_script.py  flask_service.py  input.txt
practice/sprint1/etl/: __init__.py  esloader.py  extractor.py  main.py  mapping.json
practice/sprint1/web/: es.py  main.py  schemas.py
