[tool.poetry]
name = "middle-python-developer"
version = "0.1.0"
description = ""
authors = ["George Rymarenko <george.rymarenko@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
